# libckrgb

./: CMakeLists.txt  LICENSE  README.md  libckrgb.sln  sample.cpp
libckrgb/: libckrgb.vcxproj  libckrgb.vcxproj.filters
libckrgb/include/: libckrgb.h  libckrgb.hpp  libckrgb_def.h
libckrgb/src/: CMakeLists.txt  keyboard.c  keyboard.h  libckrgb.c
libckrgb_test/: libckrgb_test.vcxproj
